Reset button added

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "clean:lib": "rm -rf lib",
-    "clean:dist": "rm -rf dist",
-    "build": "npm run clean:dist && NODE_ENV=production npm run build:webpack",
+    "clean:dist": "del dist",
+    "build": "npm run clean:dist && set NODE_ENV=production && npm run build:webpack",
     "build:webpack": "node bin/build.js",
     "build:js": "babel src -d lib",
     "start": "npm run clean:dist && node bin/build-dev",
