Make it shows button over than 3. Debug setting is added.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lib": "npm run clean:lib && node bin/build-lib",
     "prettier": "prettier --write \"src/**/*.?(js|?(s)css|json)\" && eslint --fix src",
     "lint": "eslint src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "./node_modules/.bin/webpack-dev-server --config ./webpack/dev.js"
   },
   "keywords": [],
   "author": "",
