--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,18 @@
 {
   "presets": [
     [
-      "env", {
+      "@babel/preset-env", {
         "targets": {
-          "browsers": ["last 2 versions"],
+          "node": "current",
         },
+        "useBuiltIns": "entry"
       },
     ],
-    "react",
-    "stage-0",
+    "@babel/preset-react",
   ],
   "plugins": [
-    "transform-decorators-legacy",
+    "@babel/plugin-proposal-function-bind",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
   ],
 }
