--- a/package.json
+++ b/package.json
@@ -20,54 +20,62 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "@braintree/sanitize-url": "^2.1.0",
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "cookies-js": "^1.2.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "lodash": "^4.17.4",
+    "moment": "^2.22.2",
     "progress-bar-webpack-plugin": "^1.10.0",
     "prop-types": "^15.6.0",
-    "query-string": "^5.0.1",
+    "query-string": "^6.2.0",
     "ramda": "^0.25.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-redux": "^5.0.6",
-    "react-render": "^1.2.1",
-    "react-slick": "^0.18.1",
-    "redux": "^3.7.2",
-    "redux-actions": "^2.2.1",
+    "react": "^16.6.1",
+    "react-datetime": "^2.16.2",
+    "react-dom": "^16.6.1",
+    "react-dropzone": "^7.0.1",
+    "react-input-moment": "^1.7.10",
+    "react-redux": "^5.1.0",
+    "react-render": "^2.0.0",
+    "react-slick": "^0.23.2",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
     "redux-thunk": "^2.2.0",
     "sanitize-html-react": "^1.13.0",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
-    "babel-loader": "^7.1.2",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.5",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
+    "autoprefixer": "^9.3.1",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.11.0",
-    "eslint-config-prettier": "^2.7.0",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.8.0",
+    "eslint-config-prettier": "^3.1.0",
     "eslint-config-zavatta": "^6.0.1",
     "eslint-config-zavatta-react": "^2.3.0",
     "eslint-plugin-react": "^7.4.0",
-    "file-loader": "^1.1.5",
-    "node-sass": "^4.6.1",
+    "file-loader": "^2.0.0",
+    "node-sass": "^4.10.0",
     "path": "^0.12.7",
-    "postcss-loader": "^2.0.8",
-    "precss": "^2.0.0",
-    "prettier": "^1.8.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "postcss-loader": "^3.0.0",
+    "precss": "^3.1.2",
+    "prettier": "^1.15.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
