--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prettier": "prettier --write \"src/**/*.?(js|?(s)css|json)\" && eslint --fix src",
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "debug": "./node_modules/.bin/webpack-dev-server --config ./webpack/dev.js"
+    "debug": "./node_modules/.bin/webpack-dev-server --config ./webpack/dev.js --mode=development"
   },
   "keywords": [],
   "author": "",
@@ -74,6 +74,7 @@
     "prettier": "^1.15.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
