--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dropzone": "^7.0.1",
     "react-input-moment": "^1.7.10",
     "react-redux": "^5.1.0",
+    "react-redux-i18n": "^1.9.3",
     "react-render": "^2.0.0",
     "react-slick": "^0.23.2",
     "redux": "^4.0.1",
