--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "classnames": "^2.2.5",
     "cookies-js": "^1.2.3",
     "extract-text-webpack-plugin": "^3.0.2",
+    "grunt": "^1.0.3",
+    "grunt-license-report": "0.0.8",
     "lodash": "^4.17.4",
     "moment": "^2.22.2",
     "progress-bar-webpack-plugin": "^1.10.0",
@@ -79,6 +81,6 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.14"
   }
 }
